--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "playwright-chromium": "^1.33.0"
+    "playwright-chromium": "^1.33.0",
+    "winston": "^3.9.0"
   }
 }
